Amélioration n*9 Correction de l'absence de contraste de couleurs

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1661,6 +1661,10 @@ mark {
     text-align: center
 }
 
+.text-mini {
+    font-size: 14px;
+}
+
 .introduction {
     font-size: 28px;
 }
